// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InformationItem /> check InformationItem renders properly when info is number 1`] = `
"<div className=\\"row justify-content-center mx-3 my-2 mx-md-2\\">
  <span className=\\"col-md-4 text-md-right px-0 px-md-1\\">
    <b>
      test label
    </b>
  </span>
  <span className=\\"col-md-4 text-md-left px-0 px-md-1\\">
    1
  </span>
</div>"
`;

exports[`<InformationItem /> check InformationItem renders properly when info is string 1`] = `
"<div className=\\"row justify-content-center mx-3 my-2 mx-md-2\\">
  <span className=\\"col-md-4 text-md-right px-0 px-md-1\\">
    <b>
      test label
    </b>
  </span>
  <span className=\\"col-md-4 text-md-left px-0 px-md-1\\">
    test info
  </span>
</div>"
`;

exports[`<InformationItem /> check InformationItem renders properly with default props 1`] = `
"<div className=\\"row justify-content-center mx-3 my-2 mx-md-2\\">
  <span className=\\"col-md-4 text-md-right px-0 px-md-1\\">
    <b>
      test label
    </b>
  </span>
  <span className=\\"col-md-4 text-md-left px-0 px-md-1\\" />
</div>"
`;
